CHANGES INTRODUCED IN XINS 0.194:

* XINS/Java Common Framework:
  - Added getStream() method to class HTTPServiceCaller.Result. It returns an
    InputStream for the data returned from the HTTP call.
  - Fixed bug in FastStringBuffer#append(charArray, offset, len) new lenght 
    was set to oldLenght + charArray.lenght in stead of oldLenght + len.
    
* Tests
  - Added FastStringBufferTests.

* Build and release process:
  - If no release is performed, then the .sourceforge.properties is now no
    longer required.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.193:

* XINS/Java Common Framework:
  - Fixed bug in GroupDescriptor.hasNext(). Previously it could incorrectly
    return true instead of false.
  - Deprecated getException() method in classes BootstrapException,
    DeinitializationException and InitializationException, in favor of the
    getCause() method in class Throwable, which was introduced in Java 1.4.

* XINS/Java Client Framework:
  - Deprecated getException() method in class CallException, in favor of the
    getCause() method in class Throwable, which was introduced in Java 1.4.

* XINS/Java Server Framework:
  - Outputting log message 1430 instead of 1429. The passed exception is
    always the root cause exception, if there is one. The Throwable.getCause()
    method, introduced in Java 1.4, is used to determine the cause of an
    exception.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.192:

* XINS/Java Client Framework:
  - Setting connection time-out as well. Previously, a socket time-out would
    only be set. The connection time-out is assumed to be the same as the
    socket time-out (specified in the ServiceDescriptor class).
  - Added constructor to AbstractCAPI class that accepts a Descriptor
    instance. This is from now on the preferred way of constructing an