@@ -6,6 +6,7 @@ CHANGES INTRODUCED IN XINS 0.194:
     InputStream for the data returned from the HTTP call.
   - Fixed bug in FastStringBuffer#append(charArray, offset, len) new lenght 
     was set to oldLenght + charArray.lenght in stead of oldLenght + len.
+  - Removed unused HTTPRequester class. Use the HTTPServiceCaller instead.
     
 * Tests
   - Added FastStringBufferTests.
